--- a/.github/workflows/noop-version-code-name.yml
+++ b/.github/workflows/noop-version-code-name.yml
@@ -24,7 +24,22 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  tramline: 
+    runs-on: ubuntu-latest 
+    steps: 
+      - name: this is only used by tramline! plz don't touch 
+        shell: bash
+        run: |
+          cat "${{ github.event.inputs.versionCode }}, ${{ github.event.inputs.versionName }}" > tramline.txt
+
+  tramline2: 
+    runs-on: ubuntu-latest 
+    steps: 
+      - name: this is only used by tramline! plz don't touch 
+        shell: bash
+        run: |
+          cat "${{ github.event.inputs.versionName }}" > tramline-only-version-name.txt
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
